Resolve player disguise packets